{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 44,
  "lineage": "edf4cda7-d020-ac23-be71-fb7751fbb7cc",
  "resources": [
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:internet-gateway/igw-01993a158597af38f",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0fa59c4ac2aa02283"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-0fa59c4ac2aa02283"
                ]
              }
            ],
            "id": "igw-01993a158597af38f",
            "internet_gateway_id": "igw-01993a158597af38f",
            "owner_id": "567320100185",
            "tags": {
              "Name": "test"
            }
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ips",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-01159a8dbfa3a3ed4",
            "domain": "vpc",
            "id": "eipalloc-05a24fff276afea4a",
            "network_interface": "eni-0f6757497853ff59e",
            "private_dns": "ip-192-168-13-102.eu-west-1.compute.internal",
            "private_ip": "192.168.13.102",
            "public_dns": "ec2-54-170-66-67.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.170.66.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "Name": "EKS-NAT-test-eu-west-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gws",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a24fff276afea4a",
            "id": "nat-0a4bb81c3f0ebf464",
            "network_interface_id": "eni-0f6757497853ff59e",
            "private_ip": "192.168.13.102",
            "public_ip": "54.170.66.67",
            "subnet_id": "subnet-0b6ed2d27261c1d66",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-NAT-test-eu-west-1a",
              "kubernetes.io/cluster/test": "shared"
            }
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_eip.nat_ips",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_gw_public_route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01993a158597af38f",
            "id": "r-rtb-09488216c439d6f301080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09488216c439d6f30",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.public_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_routes",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0380dd6f6f1c443581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0380dd6f6f1c44358",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_eip.nat_ips",
            "module.kubernetes.module.eks-subnets.aws_nat_gateway.nat_gws",
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-037a8e7d97d8d9f041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037a8e7d97d8d9f04",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_eip.nat_ips",
            "module.kubernetes.module.eks-subnets.aws_nat_gateway.nat_gws",
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e15d007e8b81e891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e15d007e8b81e89",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_eip.nat_ips",
            "module.kubernetes.module.eks-subnets.aws_nat_gateway.nat_gws",
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_tables",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0380dd6f6f1c44358",
            "owner_id": "567320100185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-RT-test-private-eu-west-1a",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-037a8e7d97d8d9f04",
            "owner_id": "567320100185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-RT-test-private-eu-west-1b",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08e15d007e8b81e89",
            "owner_id": "567320100185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a4bb81c3f0ebf464",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-RT-test-private-eu-west-1c",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09488216c439d6f30",
            "owner_id": "567320100185",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01993a158597af38f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "Name": "EKS-RT-test-public"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012857dd82b0bd765",
            "route_table_id": "rtb-0380dd6f6f1c44358",
            "subnet_id": "subnet-0af9943b7e8647564"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06578c7373ff015e1",
            "route_table_id": "rtb-037a8e7d97d8d9f04",
            "subnet_id": "subnet-06061a9ed44ea19ec"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5ca6f47050bda63",
            "route_table_id": "rtb-08e15d007e8b81e89",
            "subnet_id": "subnet-048ace5ecdffd367b"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.private_route_tables",
            "module.kubernetes.module.eks-subnets.aws_subnet.private_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aaa908ec6e9eeb80",
            "route_table_id": "rtb-09488216c439d6f30",
            "subnet_id": "subnet-0b6ed2d27261c1d66"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.public_route_table",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e1e2a8afbbe104a",
            "route_table_id": "rtb-09488216c439d6f30",
            "subnet_id": "subnet-0f5cb1ca92db3cc5f"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.public_route_table",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e800420306f5feb8",
            "route_table_id": "rtb-09488216c439d6f30",
            "subnet_id": "subnet-0a52a5e24fdffe978"
          },
          "dependencies": [
            "module.kubernetes.module.eks-subnets.aws_route_table.public_route_table",
            "module.kubernetes.module.eks-subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:security-group/sg-0de01519f4397ddd6",
            "description": "EKS cluster Security group",
            "egress": [],
            "id": "sg-0de01519f4397ddd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow  access to API from additional subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "test-cluster",
            "name_prefix": "",
            "owner_id": "567320100185",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_from_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow  access to API from additional subnets",
            "from_port": 443,
            "id": "sgrule-3868570598",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0de01519f4397ddd6",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.kubernetes.module.eks-cluster.aws_security_group.eks_cluster_sg"
          ]
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-0af9943b7e8647564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.10.0/24",
            "id": "subnet-0af9943b7e8647564",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-private-test-eu-west-1a",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-06061a9ed44ea19ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.11.0/24",
            "id": "subnet-06061a9ed44ea19ec",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-private-test-eu-west-1b",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-048ace5ecdffd367b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.12.0/24",
            "id": "subnet-048ace5ecdffd367b",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-private-test-eu-west-1c",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        }
      ]
    },
    {
      "module": "module.kubernetes.module.eks-subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-0b6ed2d27261c1d66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "192.168.13.0/24",
            "id": "subnet-0b6ed2d27261c1d66",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-public-test-eu-west-1a",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-0f5cb1ca92db3cc5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "192.168.14.0/24",
            "id": "subnet-0f5cb1ca92db3cc5f",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-public-test-eu-west-1b",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:567320100185:subnet/subnet-0a52a5e24fdffe978",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "192.168.15.0/24",
            "id": "subnet-0a52a5e24fdffe978",
            "map_public_ip_on_launch": false,
            "owner_id": "567320100185",
            "tags": {
              "Developed": "Sergii Shapovalenko",
              "Environment": "test",
              "KubernetesCluster": "test",
              "Name": "EKS-public-test-eu-west-1c",
              "kubernetes.io/cluster/test": "shared"
            },
            "vpc_id": "vpc-0fa59c4ac2aa02283"
          }
        }
      ]
    }
  ]
}